--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,5 +1,5 @@
 hud_saytext_time 0
-con_filter_enable 1
+con_filter_enable 0 //debug
 con_filter_text "[Surf Timer]"
-echo "lody owns"
+echo "surface loaded"
 
